[metadata]
name = pyaml_env
version = 1.0.2
author = Maria Karanasou
author_email = karanasou@gmail.com
description = Provides yaml file parsing with environment variable resolution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mkaranasou/pyaml_env
project_urls =
    Bug Tracker = https://github.com/mkaranasou/pyaml_env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src